src/test/ui/parser/removed-syntax-fixed-vec.rs
type v = [isize * 3]; //~ ERROR expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `]`, found `*`
